--- a/index.html
+++ b/index.html
@@ -46,16 +46,23 @@
             <label><input type="radio" name="pao" value="frances" required> Pão Francês</label>
             <label><input type="radio" name="pao" value="queijo"> Pão de Queijo</label>
             <label><input type="radio" name="pao" value="integral"> Pão Integral</label>
-            <label><input type="radio" name="pao" value="torrada"> Torrada</label>
+            <label><input type="radio" name="pao" value="sovado"> sovado</label>
         </fieldset>
 
         <fieldset>
             <legend>Escolha 1 Embutido/Frio</legend>
-            <label><input type="radio" name="frios" value="presunto" required> Presunto</label>
-            <label><input type="radio" name="frios" value="queijo_prato"> Queijo Prato</label>
-            <label><input type="radio" name="frios" value="peito_peru"> Peito de Peru</label>
-            <label><input type="radio" name="frios" value="ovos"> Ovos Mexidos</label>
+            <label><input type="radio" name="frio" value="presunto" required> Presunto</label>
+            <label><input type="radio" name="frio" value="peito defumado"> peito defumado</label>
+            <label><input type="radio" name="frio" value="salame colonial"> salame colonial</label>
         </fieldset>
+
+         <fieldset>
+            <legend>Escolha 1 Embutidos/Queijos</legend>
+            <label><input type="radio" name="frios" value="queijo prato" required> queijo prato</label>
+            <label><input type="radio" name="frios" value="Queijo mussarela"> Queijo mussarela</label>
+            <label><input type="radio" name="frios" value="queijo colonial"> queijo colonial</label>
+        </fieldset>
+
 
         <fieldset>
             <legend>Escolha até 2 Frutas</legend>
@@ -117,7 +124,7 @@
         // 👇👇👇 COLE O LINK DO SHEETMONKEY AQUI EMBAIXO 👇👇👇
         // ======================================================================
         
-        const SHEET_URL = "https://docs.google.com/spreadsheets/d/1e0L3EBbUV0cFCxPOJag7ewom_jM-rvGLWrBFIq2nzIY/edit?gid=1314831166#gid=1314831166"; 
+        const SHEET_URL = "https://api.sheetmonkey.io/form/fn1n3fA5kQYTtb5GqRexyY"
 
         // ======================================================================
 
