--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
             <label><input type="checkbox" name="fruta" value="maca" class="fruta-check"> Maçã</label>
         </fieldset>
 
+         <fieldset>
+            <legend>Escolha até 1 sabor de cookies</legend>
+            <label><input type="checkbox" name="cookies" value="tradicional" class="cookies-check"> tradicional</label>
+            <label><input type="checkbox" name="cookies" value="red velvet" class="cookies-check"> red velvet</label>
+            <label><input type="checkbox" name="cookies" value="nutella" class="cookies-check">nutella</label>
+            <label><input type="checkbox" name="cookies" value="leite ninho" class="cookies-check">leite ninho</label>
+            <label><input type="checkbox" name="cookies" value="amedoin" class="cookies-check"> amedoin</label>
+        </fieldset>
+
+
         <button type="button" id="btnEnviar" onclick="enviarPedido()">Fazer Pedido</button>
     </form>
 </div>
