--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </fieldset>
 
 
-        <fieldset>
+         <fieldset>
             <legend>Escolha até 2 Frutas</legend>
             <label><input type="checkbox" name="fruta" value="mamao" class="fruta-check"> Mamão</label>
             <label><input type="checkbox" name="fruta" value="banana" class="fruta-check"> Banana</label>
@@ -72,14 +72,14 @@
             <label><input type="checkbox" name="fruta" value="uva" class="fruta-check"> Uva</label>
             <label><input type="checkbox" name="fruta" value="maca" class="fruta-check"> Maçã</label>
         </fieldset>
-
+        
          <fieldset>
             <legend>Escolha até 1 sabor de cookies</legend>
-            <label><input type="checkbox" name="cookies" value="tradicional" class="cookies-check"> tradicional</label>
-            <label><input type="checkbox" name="cookies" value="red velvet" class="cookies-check"> red velvet</label>
-            <label><input type="checkbox" name="cookies" value="nutella" class="cookies-check">nutella</label>
-            <label><input type="checkbox" name="cookies" value="leite ninho" class="cookies-check">leite ninho</label>
-            <label><input type="checkbox" name="cookies" value="amedoin" class="cookies-check"> amedoin</label>
+            <label><input type="radio" name="cookies" value="tradicional" class="cookies-check"> tradicional</label>
+            <label><input type="radio" name="cookies" value="red velvet" class="cookies-check"> red velvet</label>
+              <label><input type="radio" name="cookies" value="nutella" class="cookies-check">nutella</label>
+            <label><input type="radio" name="cookies" value="leite ninho" class="cookies-check">leite ninho</label>
+            <label><input type="radio" name="cookies" value="amedoin" class="cookies-check"> amedoin</label>
         </fieldset>
 
 
